--- a/.gitignore
+++ b/.gitignore
@@ -20,5 +20,6 @@ spec/tmp/**/*
 config/mongoid_production.yml
 config/deploy.rb
 config/unicorn.conf
+config/nginx.conf
 db/seeds_old.rb
 lib/moustache_cms/mustache/custom_templates/nav_for_faculty.haml
